unpackaged/main/default/objects/Vantiv_Audit_Logs__c/Vantiv_Audit_Logs__c.object-meta.xml
<CustomObject>
    <label>Vantiv Callout Audit Log</label>
    <nameField>
        <displayFormat>VAL-{000000}</displayFormat>
        <label>Vantiv Callout Audit Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vantiv Callout Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>