unpackaged/main/default/objects/Vantiv_Audit_Logs__c/fields/Applicaion_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicaion_Type__c</fullName>
    <label>Applicaion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APM Payments</fullName>
            </value>
            <value>
                <fullName>MyCase Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>