unpackaged/main/default/objects/Vantiv_Audit_Logs__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Vantiv Callout Audit Logs</relationshipLabel>
    <relationshipName>Vantiv_Callout_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>