unpackaged/main/default/objects/Vantiv_Audit_Logs__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Legal Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>