unpackaged/main/default/objects/Vantiv_Audit_Logs__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
            <value>
                <fullName>Manual Review - Duplicate</fullName>
            </value>
            <value>
                <fullName>Manual Review - Background Check Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>