unpackaged/main/default/objects/Vantiv_Audit_Logs__c/fields/ValuePlus__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ValuePlus</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Vantiv Callout Audit Logs</relationshipLabel>
    <relationshipName>Vantiv_Callout_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>